adding notification class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <receiver
             android:name=".TimerExpiredReciever"
             android:enabled="true"
+            android:exported="false" />
+        <receiver
+            android:name=".TimerNotificationActionReciever"
+            android:enabled="true"
             android:exported="false"></receiver>
     </application>
 
