Successfully added notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,16 @@
         <receiver
             android:name=".TimerNotificationActionReciever"
             android:enabled="true"
-            android:exported="false"></receiver>
+            android:exported="false">
+
+            <intent-filter>
+                <action android:name="stop"/>
+                <action android:name="pause"/>
+                <action android:name="resume"/>
+                <action android:name="start"/>
+
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
