--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,15 +28,18 @@
             android:name=".TimerNotificationActionReciever"
             android:enabled="true"
             android:exported="false">
-
             <intent-filter>
-                <action android:name="stop"/>
-                <action android:name="pause"/>
-                <action android:name="resume"/>
-                <action android:name="start"/>
-
+                <action android:name="stop" />
+                <action android:name="pause" />
+                <action android:name="resume" />
+                <action android:name="start" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
